# gdb-sync

./: .gitignore  README.md  pyproject.toml
gdb_sync/: __init__.py  __main__.py  script.py
tests/: test_gdb_sync.py
