[tool.poetry]
name = "gdb-sync"
version = "0.1.0"
description = ""
authors = ["Abraham Yusuf <abraham.yusuf@ehealthnigeria.org>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
